public/css/style.scss
/* ... */
.flag {
	// background-color: black;
	@include box-sizing(border-box);
	background-clip:content-box;
	color:gray;
	
}

.flag-top-right {
	position: absolute;
	left: 100%;
	padding: 0 $padding $padding $padding;
}

.flag-top-left {
	position: absolute;
	right: 100%;
	padding: 0 $padding $padding $padding;
	text-align: right;
	overflow: auto;
	
	.flag-bar {
		float:right;
	}

	p {
		float:right;
	}

}

.flag-bottom-left {
	position: absolute;
	right:100%;
	bottom:0;
	padding: 0 $padding $padding $padding;
	text-align: right;
	overflow: auto;

	.flag-bar {
		float:right;
		margin-top: $padding;
	}

	p {
		float:right;
	}

	.flag-bottom-content-container {
		width:100%;
		position: absolute;
		@include box-sizing(border-box);
		padding: 0 $padding 0 $padding;
		bottom: 0;
		right:0;
	}

}

.flag-bar {
	width: 60%;
	background-color: gray;
	height:3px;
}

.flag-title {
	font-family: $helvetica;
	font-size: 1.2rem;
	font-weight: bold;
	margin-top: $padding-half;
	margin-bottom: $padding-half /2 ;
}

.flag-content {
	font-family: $helvetica;
	font-weight: .9rem;
	font-weight: 200;
}



.svg-container {
	z-index: 100;
	position: fixed;
}



.hamburger {
	position: fixed;
	z-index: 9;
	top:15px;
	left:15px;
	width:33px;
	height:18px;
	cursor:pointer;

	@include breakpoint(small) {
		top:15px;
		left:7px;
		width:27px;
		height:15px;
		
	}


	.patty {
		width:100%;
		height:2px;
		background-color: white;
		border-radius: 500px;
		@include transition(all .15s ease);

		&:first-child {
			position: absolute;
			top:0;
			left:0;
		}

		&:nth-child(2) {
			@include center;
		}

		&:last-child {
			position: absolute;
			bottom: 0;
			left: 0;
		}

	}	

	.dark {
		background-color: black;
	}

	.tilt-up {
		@include transform(rotate(45deg));
		width:70%;
	}

	.tilt-down {
		@include transform(rotate(-45deg));
		width:70%;
	}

}

nav {
	position: fixed;
	top:55px;
	left:15px;	

	ul {

		li {
			font-family: $opensans;
			font-size: 1.4rem;
			margin-bottom: 20px;
		}

	}

	.viewing {
		color:gray;
	}

}

.sidebar-info {
	position: fixed;
	left:15px;
	bottom:15px;

	.version-info {
		font-family: $opensans;
		font-size: 1.4rem;
		margin-bottom: 10px;
	}

	.fine-print {
		font-family: $opensans;
		font-size: .6rem;
	}
}

.arrow-down {
	@include center;
	top:97.5%;

	img {
		width:40px;
	}
}

.twitter-share-video-text {
	@include center;
	width:400px;
	display: none;
	z-index: 6;
}

.twitter-share-video-overlay {
	background-color: $twitter;
	width:2000px;
	height:2000px;
	position: absolute;
	top:35%;
	left:50%;
	z-index:4;
	@include transform(scale3d(0.001,0.001,1));
	@include transition(all .4s ease);
	border-radius: 50%;

}

.twitter-share-video-overlay-enlarge {
	@include transform(scale3d(3, 3, 1));
}

.twitter-share-video {

	position:absolute;
	bottom:15px;
	right:15px;
	z-index: 8;

	i {
		display: block;
		color:white;
		font-size: 2.2rem;
		margin-top: 7px;
	}

	@include breakpoint(1000px) {
		display: none;
	}

}


.footer-container {
	width:100%;
	height: 500px;
	position: relative;
	overflow: hidden;
	background-color: white;

	@include breakpoint(1000px) {
		overflow: auto;
		height:auto;	
	}

	img {
		width:300px;
		display: block;
		margin:0px auto 15px auto;
	}

	.image-description {
		display: block;
		margin:0 auto;
		text-transform: uppercase;
		text-align: center;
		font-family: $opensans;
		color:gray;
		font-size: 1.1rem;
		font-weight: normal;
	}


}


.footer {
	position: fixed;
	width:100%;
	height:500px;
	background-color: $gray; 
	bottom: 0;
	@include transform(translateY(500px));
	// z-index:-9;
	pointer-events:none;
	
	.tagline {

		font-family: $opensans;
		font-size: 1.25rem;
		text-transform: uppercase;
		font-weight: bold;
		margin-bottom: 17px;
	}

	.form-container {
		float:left;
		// background-color: gray;
		margin:50px 60px;
		// @include box-sizing(border-box);

		@include breakpoint(1000px) {
			float:none;
			margin: 50px 30px;
		}

	}

	.call-to-action {
		float:right;
		margin:80px 60px;
		// background-color: gray;
		text-align: right;
		font-family: $opensans;

		.letter-tape {
			background-color: black;
			color:white;
			font-size: 3rem;
			text-align: right;
			display: inline-block;
			margin-bottom: 10px;
			font-weight: 300;

			@include breakpoint(1000px) {
				font-size: 2rem;
				text-align: center;
			}
		}

		p:last-child {
			font-size: 2.2rem;
			font-weight: 300;
			margin-top: 30px;

			@include breakpoint(1000px) {
				font-size: 1.8rem;
			}
		}

		@include breakpoint(1000px) {
			float:none;
			text-align: center;
			margin:50px auto 200px auto;
		}
	}

	@include breakpoint(1000px) {
		height:auto;
		overflow: auto;
		@include transform(translateY(0px));
	}

}

.success-overlay {

	position: fixed;
	width:100%;
	height:100%;
	top:0;
	left:0;
	background-color: $yellow;
	color:white;
	font-family: $opensans;
	text-align: center;

	div {
		width:30%;
		top:45%;
	}

	.heading {
		text-align: center;
		font-size: 4rem;
		font-weight: 300;
	}

	.sub-heading {
		font-size: 1.5rem;
		font-weight: 400;
		text-align: center;
	}

	.choices {
		font-size: 6rem;
		text-align: center;
		font-weight: 300;

		span {
			cursor:pointer;
		}
	}

}

form {



}

.inputs {

	outline: none;
	border:none;
	font-size: 3rem;
	font-family: $opensans;
	font-weight: 300;
	border-bottom: solid 1px black;
	width:500px;
	background-color: transparent;
	border-radius: 0;

	@include placeholder {
		color:black;
	}

	@include ellipsis;

	@include breakpoint(1000px) {
		width:100%;
		font-size: 1.5rem;
		margin-top: 10px;
	}

	&:focus {
		@include placeholder {
			color:gray;
		}
	}

}
/* ... */

